<resources>
    <string name="app_name">Clima &amp; Chat</string>

    <string name="Nome">Nome</string>
    <string name="Email">E-mail</string>
    <string name="Senha">Senha</string>
    <string name="Cidade">Cidade</string>
    <string name="Estado">Estado</string>
    <string name="menu_sair">Sair</string>
    <string name="menu_configuracoes">Configurações</string>
    <string name="fab_menu_pesquisa">Pesquisar cidade</string>
    <string name="fab_menu_gps">Usar gps ou internet</string>
    <string name="pesquisa">Pesquisar</string>
    <string name="fab_menu_ajuda">Preciso de ajuda</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="menu_deletar">Deletar</string>
    <string name="menu_home">Casa</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="texto_duvida_notificacao_imagem">Ao receber a notificação, você pode informar os usuários interessados nas condições climáticas de sua cidade, tirando fotos do céu para mostrar o clima atual através de imagens. Exemplo na imagem à seguir.</string>
    <string name="title_activity_ad">AdActivity</string>
    <string name="action_settings">Settings</string>


    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
</resources>